# cvat.py

./: .gitignore  README.md  location.py  surf_test.py
src/: CMakeLists.txt  surf_test.cpp
utils/: capture.py  feature_gen.py  odemeter.py
